<resources>
    <string name="app_name">Fidw4r</string>
    <string name="password">Password</string>
    <string name="conferma">Conferma</string>
    <string name="username">Username</string>
    <string name="registrati">Registrati</string>
    <string name="ospite">Ospite</string>
    <string name="email">Email</string>
    <string name="conferma_password">Conferma Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accedi">Accedi</string>
    <string name="benvenuto">BENVENUTO</string>
    <string name="loggato">QUESTO UTENTE E\' GIA\' LOGGATO</string>
    <string name="non_ottenuto">Utente non ottenuto</string>
    <string name="credenziali_non_valide">Credenziali non valide</string>
    <string name="utente_errato">Utente non valido</string>
    <string name="probelma_di_rete">impossibile connettersi alla rete"</string>
    <string name="troppe_richeste">troppe richieste, attendere prima di effettuare di nuovo il login"</string>
    <string name="errore_login">errore, impossibile effettuare il login</string>
    <string name="login_in_corso">Login in corso</string>
    <string name="formato_corretto">Inserisci un formato corretto</string>
    <string name="caratteri_psw">Inserisci una password con almeno 8 caratteri</string>
    <string name="password_diverse">Le password non corrispondono</string>
    <string name="inserisci_username">Inserisci un username</string>
    <string name="registrazione_avvenuta">Registrazione Avvenuta</string>
    <string name="mail_esistente">Email già esistente</string>
    <string name="password_debole">Password non abbastanza sicura</string>
    <string name="accesso_negato">Impossibile effettuare l\'accesso</string>
    <string name="avversario_ritirato">l\'avversario si è ritirato</string>
    <string name="attesa_avversario">IN ATTESA DELL\'AVVERSARIO</string>
    <string name="avversario_disconnesso">L\'AVVERSARIO SI E\' DISCONNESSO</string>
    <string name="attesa_riconnessione">IN ATTESA DI RICONNESSIONE...</string>
    <string name="connesione_persa_avversario">l\'avversario ha perso la connesione</string>
    <string name="connesione_persa_giocatore">hai perso la connesione</string>
    <string name="wifi_interrotto">LA CONNESSIONE WIFI E\' STATA INTERROTTA.</string>
    <string name="ti_rimangono">TI RIMANGONO</string>
    <string name="secondi">SECONDI</string>
    <string name="partita_persa">PER RICONNETTERTI, ALTRIMENTI PERDI LA PARTITA!</string>
    <string name="ospite_negato">IMPOSSIBILE GIOCARE COME OSPITE</string>
    <string name="usare_account">DEVI USARE UN ACCOUNT PER GIOCARE</string>
    <string name="connessione_lunga">IMPOSSIBILE STABILIRE LA CONNESSIONE IN TEMPO</string>
    <string name="internet_necessario">INTERNET E\' DISABILITATO COLLEGATI A UNA RETE PER GIOCARE</string>
    <string name="problema_connessione">PROBLEMA DI CONNESSIONE, RIPROVA.</string>
    <string name="rete_inaccessibile">IMPOSSIBILE ACCEDERE ALLA RETE.</string>
    <string name="errore_ricerca">ERRORE DURANTE LA RICERCA,</string>
    <string name="riprova">RIPROVA</string>
    <string name="cinque_carte">NON PUOI GIOCARE PIU\' DI 5 CARTE INSIEME</string>
    <string name="troppe_carte">TROPPE CARTE IN MANO, UNA CARTA E\' STATA BRUCIATA</string>
    <string name="hai_perso">HAI PERSO</string>
    <string name="pareggio">PAREGGIO</string>
    <string name="rome">Roma</string>
    <string name="legionari">Legionari</string>
    <string name="legionari_effect">Evoca una copia di sé stesso.</string>
    <string name="legionari_description">Il legionario romano era il fante che faceva parte della legione romana. I Romani dovettero affrontare svariate popolazioni che adottavano metodi di combattimento differenti tra loro; questo influì sia sull\'organizzazione e sulla struttura della legione, sia sul tipo di armamento utilizzato. Il legionario è sempre stato fonte di ispirazione e modello dal punto di vista militare per le proprie capacità, la propria esperienza ed efficienza.</string>
    <string name="centurioni">Centurioni</string>
    <string name="centurioni_effect">Infligge 2 danni all\'eroe avversario.</string>
    <string name="centurioni_description">Il centurione era uno dei gradi della catena di comando nell\'Esercito Romano, a capo di una centuria, paragonabile ai moderni ufficiali di grado intermedio. I centurioni romani erano sempre posizionati in prima linea, per dare dimostrazione del proprio coraggio ed impeto ai propri soldati, ai fini del buon esito della battaglia, almeno dai tempi delle guerre puniche.</string>
    <string name="gladiatiori">Gladiatori</string>
    <string name="gladiatori_effect">Evoca 2 copie di se stesso.</string>
    <string name="gladiatori_description">Il gladiatore, era un particolare lottatore dell\'antica Roma. Il nome deriva da gladio, la spada utilizzata dai legionari romani utilizzata anche dai lottatori. I gladiatori combattevano in specifici spettacoli chiamati munera per la realizzazione dei quali si sviluppò la struttura architettonica dell\'anfiteatro. L\'origine della figura del gladiatore è ricollegata all\'istituzione del cosiddetto munus, il dovere/obbligo dovuto dalle famiglie benestanti ai propri defunti, durante le quali uomini armati, alla presenza di un arbitro, si battevano per onorare il defunto.</string>
    <string name="bighe">Bighe da corsa</string>
    <string name="bighe_effect">Aggiunge +1 forza alle tue altre truppe evocate in questo turno.</string>
    <string name="bighe_description">La biga era il cocchio da guerra, o da pompa magna o da giostre, utilizzato in epoca classica. Le bighe generalmente erano biposto ed erano collegate a 2 o più cavalli, erano scoperte di tettoia ed avevano generalmente la parte anteriore di forma semicircolare. La parte posteriore aperta consentiva all\'auriga di salirvi.</string>
    <string name="terme">Termae romane</string>
    <string name="terme_effect">Guadagni 2 punti vita per ogni truppa evocata nel turno precedente.</string>
    <string name="terme_description">Le terme romane erano edifici pubblici dotati di impianti che oggi si chiamerebbero igienico-sanitari. Rappresentavano uno dei principali luoghi di ritrovo durante l\'antica Roma, a partire dal II secolo a.C. Alle terme poteva avere accesso quasi chiunque, anche i più poveri, in quanto in molti stabilimenti l\'entrata era gratuita o quasi. Le numerose terme erano un luogo di socializzazione, di rilassamento e di sviluppo di attività vive per uomini e donne, in spazi e orari separati.</string>
    <string name="testuggine">Formazione a testuggine</string>
    <string name="testuggine_effect">Infliggi 2 danno per ogni truppa evocata il turno precedente.</string>
    <string name="testuggine_description">La testuggine romana era una formazione di fanteria caratteristica dell\'esercito romano. Schieramento di grande complessità, richiedeva notevole coordinamento collettivo. Era ideato appositamente per un drappello di legionari, armati con il gladio e, in particolare, con l\'ampio e robusto scudo quadrangolare in dotazione alle legioni. Dava il grande vantaggio di poter avanzare fino al contatto con le prime file nemiche riparandosi da frecce e proiettili e occultando il reale numero dei componenti, in modo da generare un effetto sorpresa. Grazie alla protezione che offriva, questa formazione era particolarmente usata durante gli assedi.</string>
    <string name="necropoli">Necropoli</string>
    <string name="necropoli_effect">Pesca una carta per ogni tua truppa distrutta il turno precedente.</string>
    <string name="necropoli_description">In età romana una fondamentale disposizione giuridica, che doveva essere rispettata da tutta la comunità, imponeva il seppellimento dei morti al di fuori del perimetro della città. Ciò era determinato sia da evidenti ragioni igieniche sia per motivi di superstizione che volevano rigidamente separati il mondo dei vivi da quello dei morti, regola che veniva applicata anche da coloro che risiedevano in villaggi o in abitazioni isolate. Le necropoli si disponevano quindi nei suburbia delle città, lungo le più importanti direttrici viarie oppure nelle campagne in adiacenza ai campi, sia sui principali assi centuriali che sulle strade interne.</string>
    <string name="colosseo">Colosseo</string>
    <string name="colosseo_effect">Evoca 2 gladiatori senza effetto. Si attiva anche il prossimo turno.</string>
    <string name="colosseo_description">Il Colosseo, originariamente conosciuto come Anfiteatro Flavio o semplicemente Amphitheatrum, situato nel centro della città di Roma, è il più grande anfiteatro romano del mondo (in grado di contenere un numero di spettatori stimato tra 50 000 e 87 000).Il Colosseo ospitava i giochi dell\'anfiteatro, che comprendevano: lotte tra animali (venationes), l\'uccisione di condannati da parte di animali feroci o altri tipi di esecuzioni (noxii) e i combattimenti tra gladiatori (munera). Le attività seguivano un programma codificato: la mattina c\'erano i combattimenti fra gli animali o fra un gladiatore e un animale, all\'ora di pranzo si eseguivano le condanne a morte e solo nel pomeriggio si svolgevano i combattimenti fra gladiatori.</string>
    <string name="spartaco">Spartaco</string>
    <string name="spartaco_effect">Quando viene evocato aggiunge +1 alla forza delle tue altre truppe.</string>
    <string name="spartaco_description">Spartaco è stato un gladiatore e condottiero trace che capeggiò la rivolta di schiavi nota come terza guerra servile, la più impegnativa di questo tipo che Roma dovette affrontare.</string>
    <string name="bruto">Bruto</string>
    <string name="bruto_effect">Quando viene evocato, sottrae 2 punti vita (se possibile) e raddoppia la sua forza.</string>
    <string name="bruto_description">Marco Giunio Bruto, ufficialmente noto dopo l\'adozione come Quinto Servilio Cepione Bruto (Quintus Servilius Caepio Brutus), è stato un politico, oratore, filosofo e studioso romano, senatore della tarda Repubblica romana e uno degli assassini di Giulio Cesare; fu difatti una delle figure preminenti della congiura delle Idi di marzo assieme a Gaio Cassio Longino e a Decimo Bruto.</string>
    <string name="romoloremo">Romolo e Remo</string>
    <string name="romoloremo_effect">Infligge 5 danni all’eroe avversario.</string>
    <string name="romoloremo_description">Romolo e Remo sono, nella tradizione mitologica romana, due fratelli gemelli, uno dei quali, Romolo, fu il fondatore eponimo della città di Roma e suo primo re. La data di fondazione è indicata per tradizione al 21 aprile 753 a.C. Secondo la leggenda, erano figli di Rea Silvia, discendente di Enea, e di Marte.</string>
    <string name="persia">Persia</string>
    <string name="sparabara">Sparabara</string>
    <string name="sparabara_effect">Rigenera 1 punto vita.</string>
    <string name="sparabara_description">Gli sparabara erano fanti di prima linea impiegati nelle battaglie condotte dall\'Impero persiano, provenivano da ogni ceto della società persiana e venivano educati sin da bambini all\'arte militare, e quando non impiegati in campagne lontano dal loro paese si dedicavano all\'agricoltura e alla caccia nelle vaste pianure della Persia.</string>
    <string name="arcieri_persiani">Arcieri persiani</string>
    <string name="arcieri_persiani_effect">Rigenera 2 punti vita.</string>
    <string name="arcieri_persiani_description">Erano in pochi i Persiani soldati di professione e, a parte i primi Immortali achemenidi e alcuni opliti mercenari, nessuno era addestrato. La fanteria di leva includeva soldati armati di frombolo, archi o giavellotti, tutti con armature leggere, ma alcuni portavano lo scudo.</string>
    <string name="immortali">Gli Immortali</string>
    <string name="volume">Volume</string>
    <string name="lingua">lingua</string>
    <string name="esci">esci</string>
    <string name="crediti">crediti</string>
</resources>