<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/back_menu"
            />

        <EditText
            android:id="@+id/userRegister"
            android:layout_width="500dp"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:hint="@string/username"
            android:textColor="@color/franco"
            android:textColorHint="@color/franco"
            android:fontFamily="@font/romans"
            android:textSize="30sp"

            android:text=""

            app:layout_constraintBottom_toTopOf="@id/mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </EditText>

    <ImageView
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_block"
        app:layout_constraintBottom_toTopOf="@id/mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        ></ImageView>

        <EditText
            android:id="@+id/mail"
            android:layout_width="500dp"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:hint="@string/email"
            android:textColor="@color/franco"
            android:textColorHint="@color/franco"
            android:fontFamily="@font/romans"
            android:textSize="30sp"


            app:layout_constraintBottom_toTopOf="@id/passwordRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userRegister">

        </EditText>

    <ImageView
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_block"
        app:layout_constraintBottom_toTopOf="@id/passwordRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userRegister"
        ></ImageView>

        <EditText
            android:id="@+id/passwordRegister"
            android:layout_width="500dp"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:hint="@string/password"
            android:textColor="@color/franco"
            android:textColorHint="@color/franco"
            android:fontFamily="@font/romans"
            android:textSize="30sp"
            android:inputType="textPassword"

            app:layout_constraintBottom_toTopOf="@id/confirmPass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mail" />

    <ImageView
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_block"

        app:layout_constraintBottom_toTopOf="@id/confirmPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mail"
        ></ImageView>

        <EditText
            android:id="@+id/confirmPass"
            android:layout_width="500dp"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:hint="@string/conferma_password"
            android:textColor="@color/franco"
            android:textColorHint="@color/franco"
            android:fontFamily="@font/romans"
            android:textSize="30sp"
            android:inputType="textPassword"

            app:layout_constraintBottom_toTopOf="@id/ConfirmRegisterText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordRegister">

        </EditText>

    <ImageView
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_block"
        app:layout_constraintBottom_toTopOf="@id/ConfirmRegisterText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordRegister"
        ></ImageView>


    <ImageButton
        android:id="@+id/btnConfirmRegister"
        android:background="@drawable/generic_button"

        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_gravity="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPass"
        />
    <TextView
        android:id="@+id/ConfirmRegisterText"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/registrati"
        android:textColor="@color/franco"
        android:fontFamily="@font/roman_sd"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPass"
        />

</androidx.constraintlayout.widget.ConstraintLayout>