<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back_menu"
        />

    <ImageButton
        android:id="@+id/btnLogin"
        android:background="@drawable/generic_button"

        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_gravity="center"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"
        />
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/accedi"
        android:textStyle="bold"
        android:textColor="@color/franco"
        android:fontFamily="@font/roman_sd"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"
        />

    <ImageButton
        android:id="@+id/btnRegister"
        android:background="@drawable/generic_button"

        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_gravity="center"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnGuest"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        />
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/registrati"
        android:textColor="@color/franco"
        android:fontFamily="@font/roman_sd"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnGuest"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        />

    <ImageButton
        android:id="@+id/btnGuest"
        android:background="@drawable/generic_button"

        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_gravity="center"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRegister"
        />
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/ospite"
        android:textColor="@color/franco"
        android:fontFamily="@font/roman_sd"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRegister"
        />


    <ImageButton
        android:id="@+id/btnCredits"
        android:background="@drawable/generic_button"

        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"

        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:onClick="credits"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:background="@android:color/transparent"
        android:text="@string/crediti"
        android:textColor="@color/franco"
        android:fontFamily="@font/roman_sd"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="15sp"
        android:gravity="center"
        />



    <FrameLayout
        android:id="@+id/settingsFrame"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/settings_button"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/btnSettings"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:onClick="settings"
            />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


