<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".vista.SettingsFragment">

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back_menu"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/volume"
        android:layout_width="352dp"
        android:layout_height="90dp"
        android:gravity="center"

        android:background="@android:color/transparent"

        app:layout_constraintBottom_toTopOf="@id/btnChangeLanguage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/volumeText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:fontFamily="@font/roman_sd"
            android:gravity="center"
            android:textColor="@color/franco"
            android:text="@string/volume"
            android:textSize="30sp"

            android:background="@android:color/transparent"
            
            app:layout_constraintBottom_toTopOf="@id/volumeSeekBar"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/volumeSeekBar"
            android:layout_width="240dp"
            android:layout_height="45dp"
            android:layout_gravity="center"

            android:max="100"
            android:progress="50"
            android:progressTint="@color/franco"
            android:thumbTint="@color/paolo"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"></SeekBar>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/btnChangeLanguage"
        android:background="@drawable/change_language"

        android:layout_width="352dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:onClick="changeLanguage"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnLogOut"
        app:layout_constraintTop_toBottomOf="@id/volume"
        />

    <TextView
        android:layout_marginStart="46dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/lingua"
        android:textColor="@color/franco"
        android:fontFamily="@font/roman_sd"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnLogOut"
        app:layout_constraintTop_toBottomOf="@id/volume"
        />

    <ImageButton
        android:id="@+id/btnLogOut"
        android:background="@drawable/exit"

        android:layout_width="352dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:onClick="logout"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnChangeLanguage"
        />

    <TextView
        android:layout_marginStart="46dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/esci"
        android:textColor="@color/franco"
        android:fontFamily="@font/roman_sd"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnChangeLanguage"
        />




</androidx.constraintlayout.widget.ConstraintLayout>